# mcp_servers

./: .gitignore  mcp-servers-schema.json  package-lock.json  repomix-output.xml
audio/: meeting_assistant.py
docs/: API.md  CEO_Executive_Report.md  CTO_Executive_Summary_Bitcoin_Analysis.md  DATA_CORR.md  README.md  alpaca_crypto_guide.py  another.md  bitcoin.md  code.md  correlation.md  customer_data.csv  enhanced_crypto_data.py  mcp_python_sdk.md  testies.md  testies2.md  the_plan.md
frontend/: customer_data.json  package-lock.json  package.json  sample_customer_data.csv
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/business-intelligence/: page.tsx
frontend/src/app/federal-assistance/: page.tsx
frontend/src/app/infrastructure-automation/: page.tsx
frontend/src/app/learning/: page.tsx
frontend/src/app/mcp/: page.tsx
frontend/src/app/mcp-test/: page.tsx
frontend/src/app/project-management/: page.tsx
frontend/src/app/smart-dev-env/: page.tsx
frontend/src/components/bi/: Bi-Discovery.tsx  BusinessContextCard.tsx  CorrelationDeepDive.tsx  DataSourceCard.tsx  FileUploadZone.tsx  QuickStartRecommendations.tsx  WorkflowNavigation.tsx  (+1 more)
info/: analytics.md  assistance.md  basic_mcp.md  blueprints.md  data.py  examples.md  executive.md  mcp_python_sdk.md  mcp_typescript_sdk.md  project-manager.md  results.md  test5.md  trend_analytics.md  tutorial.json
mcp-servers/: app.py  pyproject.toml  vuln_cache.db
mcp-servers/business-intelligence/: .gitignore  README.md  crypto_data_ADA.csv  crypto_data_BTC.csv  crypto_data_DOGE.csv  crypto_data_DOT.csv  crypto_data_ETH.csv  crypto_data_LINK.csv  crypto_data_LTC.csv  crypto_data_SOL.csv  data1.py  docs.md  pyproject.toml  requirements.txt  server.py  server_fastmcp.py  setup_dev.py
mcp-servers/business-intelligence/data/: crypto_data_ADA.csv  crypto_data_ALGO.csv  crypto_data_ATOM.csv  crypto_data_AVAX.csv  crypto_data_BCH.csv  crypto_data_BTC.csv  crypto_data_DOGE.csv  crypto_data_DOT.csv  crypto_data_ETH.csv  crypto_data_LINK.csv  crypto_data_LTC.csv  crypto_data_MATIC.csv  crypto_data_SOL.csv  crypto_data_UNI.csv  data.py  sample_customers.csv  sample_sales.csv  sample_sales.xlsx  test_data.csv
mcp-servers/business-intelligence/docs/: API.md  README.md
mcp-servers/business-intelligence/src/prompts/: action_recommendations.py  bi_discovery.py  correlation_deep_dive.py  executive_summary.py  insight_investigation.py  trend_analysis.py
mcp-servers/business-intelligence/src/tools/: create_visualization.py  export_report.py  load_datasource.py  profile_dataset.py  run_correlation.py  schedule_analysis.py
mcp-servers/business-intelligence/tests/: conftest.py  test_server.py
mcp-servers/docs/: API.md  report.md
mcp-servers/infrastructure-automation/: README.md  server_fastmcp.py
mcp-servers/infrastructure-automation/src/prompts/: deployment_strategy.py  disaster_recovery.py  incident_response.py  infra_health_check.py  scaling_analysis.py  security_audit.py
mcp-servers/infrastructure-automation/src/tools/: analyze_logs.py  backup_data.py  deploy_application.py  monitor_services.py  rotate_secrets.py  scale_resources.py
mcp-servers/learning-documentation/: server_fastmcp.py  working.md
mcp-servers/learning-documentation/src/prompts/: content_generation.py  documentation_audit.py  interactive_tutorial.py  knowledge_assessment.py  learning_path_design.py  progress_tracking.py
mcp-servers/learning-documentation/src/tools/: analyze_knowledge_gaps.py  create_tutorial.py  export_curriculum.py  generate_quiz.py  track_completion.py  update_content.py
mcp-servers/orchestrator/: dynamic_executable.py  server_fastmcp.py
mcp-servers/project-management/: BUGFIX_SUMMARY.md  README.md  server_fastmcp.py  working.md  working2.md
mcp-servers/project-management/src/prompts/: delivery_planning.py  milestone_planning.py  progress_review.py  project_kickoff.py  resource_optimization.py  risk_assessment.py
mcp-servers/project-management/src/tools/: assign_tasks.py  create_project.py  generate_timeline.py  identify_blockers.py  send_notifications.py  track_progress.py
mcp-servers/smart-dev-env/: README.md  in-action.md  mcp.json  server.py  server_fastmcp.py  test_server.py
mcp-servers/smart-dev-env/src/prompts/: architecture_analysis.py  code_review.py  debug_investigation.py  dev_setup.py  performance_audit.py  refactor_planning.py
mcp-servers/smart-dev-env/src/tools/: analyze_codebase.py  check_dependencies.py  deploy_preview.py  generate_docs.py  rollback_changes.py  run_tests.py
mcp-servers/smart-dev-env/test-data/: package.json  sample_app.py  test_sample_app.py
mcp-servers/test/: software_dev.py
reports/: trend.md
temp/: bitcoin.md
(+75 files in other folders)
