[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "croniter>=6.0.0",
    "matplotlib>=3.10.3",
    "mcp[cli,fastmcp]>=1.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "mcp>=1.9.4",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
