[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ace-tools>=0.0",
    "ace-tools-open>=0.1.0",
    "aiohttp>=3.12.13",
    "croniter>=6.0.0",
    "faker>=37.4.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.20.0",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.4",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "toml>=0.10.2",
    "yfinance>=0.2.63",
]

[dependency-groups]
dev = [
    "mcp>=1.9.4",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
